--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -205,6 +205,7 @@
                                 app:tint="@color/main_text_color" />
 
                             <CheckBox
+                                android:id="@+id/checkbox"
                                 android:layout_width="30dp"
                                 android:layout_height="30dp"
                                 android:layout_gravity="center"
