--- a/app/src/main/res/layout/item_rv_calculate.xml
+++ b/app/src/main/res/layout/item_rv_calculate.xml
@@ -31,17 +31,6 @@
         android:textColor="@color/main_text_color"
         android:textStyle="bold" />
 
-    <it.sephiroth.android.library.numberpicker.NumberPicker
-        android:id="@+id/count"
-        android:layout_width="100dp"
-        android:layout_height="27dp"
-        android:layout_margin="5dp"
-        android:orientation="horizontal"
-        android:progress="1"
-        app:picker_max="1000"
-        app:picker_min="0"
-        app:picker_stepSize="1"
-        app:picker_tracker="linear" />
 
     <EditText
         android:id="@+id/tv_bought_price"
@@ -51,6 +40,7 @@
         android:background="@drawable/style_null"
         android:digits="0123456789"
         android:gravity="right|center_vertical"
+        android:imeOptions="actionDone"
         android:inputType="numberDecimal"
         android:maxLines="1"
         android:padding="5dp"
@@ -67,6 +57,7 @@
         android:background="@drawable/style_null"
         android:digits="0123456789"
         android:gravity="right|center_vertical"
+        android:imeOptions="actionDone"
         android:inputType="numberDecimal"
         android:maxLines="1"
         android:padding="5dp"
@@ -90,20 +81,18 @@
         android:textColor="@color/main_text_color"
         android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/tv_old_price"
-        android:layout_width="90dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:background="@drawable/style_null"
-        android:digits="0123456789"
-        android:ellipsize="end"
-        android:gravity="right|center_vertical"
-        android:maxLines="1"
-        android:padding="5dp"
-        android:text="150 000"
-        android:textColor="@color/main_text_color"
-        android:textStyle="bold" />
+    <it.sephiroth.android.library.numberpicker.NumberPicker
+        android:id="@+id/count"
+        android:layout_width="100dp"
+        android:layout_height="27dp"
+        android:layout_margin="5dp"
+        android:orientation="horizontal"
+        android:progress="1"
+        android:overScrollMode="never"
+        app:picker_max="100"
+        app:picker_min="0"
+        app:picker_stepSize="1"
+        app:picker_tracker="linear" />
 
     <EditText
         android:id="@+id/tv_total_price"
@@ -113,6 +102,7 @@
         android:background="@drawable/style_null"
         android:digits="0123456789"
         android:gravity="right|center_vertical"
+        android:imeOptions="actionDone"
         android:inputType="numberDecimal"
         android:maxLines="1"
         android:padding="5dp"
@@ -131,6 +121,21 @@
         android:ellipsize="end"
         android:gravity="right|center_vertical"
         android:inputType="numberDecimal"
+        android:maxLines="1"
+        android:padding="5dp"
+        android:text="150 000"
+        android:textColor="@color/main_text_color"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/tv_old_price"
+        android:layout_width="90dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:background="@drawable/style_null"
+        android:digits="0123456789"
+        android:ellipsize="end"
+        android:gravity="right|center_vertical"
         android:maxLines="1"
         android:padding="5dp"
         android:text="150 000"
