--- a/app/src/main/res/layout/item_rv_calculate.xml
+++ b/app/src/main/res/layout/item_rv_calculate.xml
@@ -81,18 +81,45 @@
         android:textColor="@color/main_text_color"
         android:textStyle="bold" />
 
-    <it.sephiroth.android.library.numberpicker.NumberPicker
-        android:id="@+id/count"
+    <LinearLayout
         android:layout_width="100dp"
-        android:layout_height="27dp"
-        android:layout_margin="5dp"
-        android:orientation="horizontal"
-        android:progress="1"
-        android:overScrollMode="never"
-        app:picker_max="100"
-        app:picker_min="0"
-        app:picker_stepSize="1"
-        app:picker_tracker="linear" />
+        android:layout_height="33dp"
+        android:layout_marginLeft="10dp"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <Button
+            android:layout_width="27dp"
+            android:layout_height="match_parent"
+            android:text="-"
+            android:textStyle="bold"
+            android:padding="0dp"
+            android:textAllCaps="false"
+            android:gravity="center"
+            android:textSize="15dp" />
+
+        <EditText
+            android:layout_width="46dp"
+            android:layout_height="match_parent"
+            android:background="@drawable/style_null"
+            android:gravity="center"
+            android:hint="0"
+            android:inputType="numberDecimal"
+            android:digits="0123456789"
+            android:maxLines="1"
+            android:maxLength="4"
+            android:textSize="15dp" />
+
+        <Button
+            android:layout_width="27dp"
+            android:layout_height="match_parent"
+            android:text="+"
+            android:textStyle="bold"
+            android:padding="0dp"
+            android:textAllCaps="false"
+            android:gravity="center"
+            android:textSize="15dp" />
+    </LinearLayout>
 
     <EditText
         android:id="@+id/tv_total_price"
