--- a/app/src/main/res/layout/fragment_calculate.xml
+++ b/app/src/main/res/layout/fragment_calculate.xml
@@ -25,7 +25,138 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:orientation="vertical"
                     android:padding="10dp">
+
+                    <HorizontalScrollView
+                        android:scrollbars="none"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="center_vertical"
+                            android:orientation="horizontal">
+                            <ImageView
+                                android:id="@+id/bookmark"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginRight="5dp"
+                                android:src="@drawable/ic_bookmark"
+                                app:tint="@color/main_text_color" />
+                            <LinearLayout
+                                android:layout_marginRight="10dp"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:background="@drawable/style_corner_1_grey"
+                                android:gravity="bottom"
+                                android:orientation="horizontal"
+                                android:paddingLeft="10dp"
+                                android:paddingRight="10dp">
+
+                                <EditText
+                                    android:id="@+id/tax_price"
+                                    android:layout_width="95dp"
+                                    android:layout_height="wrap_content"
+                                    android:background="@drawable/style_null"
+                                    android:digits="0123456789"
+                                    android:ellipsize="end"
+                                    android:gravity="right|center_vertical"
+                                    android:hint="Tax price      "
+                                    android:imeOptions="actionDone"
+                                    android:inputType="numberDecimal"
+                                    android:maxLength="9"
+                                    android:maxLines="1"
+                                    android:padding="5dp"
+                                    android:textColor="@color/main_text_color"
+                                    android:textSize="15dp"
+                                    android:textStyle="bold" />
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="bottom"
+                                    android:text="UZS"
+                                    android:textColor="@color/main_text_color"
+                                    android:textSize="13dp"
+                                    android:textStyle="bold" />
+                            </LinearLayout>
+                            <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:background="@drawable/style_corner_1_grey"
+                                android:gravity="bottom"
+                                android:orientation="horizontal"
+                                android:paddingLeft="10dp"
+                                android:paddingRight="10dp">
+
+                                <EditText
+                                    android:layout_width="95dp"
+                                    android:layout_height="wrap_content"
+                                    android:background="@drawable/style_null"
+                                    android:digits="0123456789"
+                                    android:ellipsize="end"
+                                    android:gravity="right|center_vertical"
+                                    android:hint="Tax price      "
+                                    android:imeOptions="actionDone"
+                                    android:inputType="numberDecimal"
+                                    android:maxLength="9"
+                                    android:maxLines="1"
+                                    android:padding="5dp"
+                                    android:textColor="@color/main_text_color"
+                                    android:textSize="15dp"
+                                    android:textStyle="bold" />
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="bottom"
+                                    android:text="UZS"
+                                    android:textColor="@color/main_text_color"
+                                    android:textSize="13dp"
+                                    android:textStyle="bold" />
+                            </LinearLayout>
+                            <LinearLayout
+                                android:layout_marginLeft="10dp"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:background="@drawable/style_corner_1_grey"
+                                android:gravity="bottom"
+                                android:orientation="horizontal"
+                                android:paddingLeft="10dp"
+                                android:paddingRight="10dp">
+
+                                <EditText
+                                    android:layout_width="95dp"
+                                    android:layout_height="wrap_content"
+                                    android:background="@drawable/style_null"
+                                    android:digits="0123456789"
+                                    android:ellipsize="end"
+                                    android:gravity="right|center_vertical"
+                                    android:hint="Tax price      "
+                                    android:imeOptions="actionDone"
+                                    android:inputType="numberDecimal"
+                                    android:maxLength="9"
+                                    android:maxLines="1"
+                                    android:padding="5dp"
+                                    android:textColor="@color/main_text_color"
+                                    android:textSize="15dp"
+                                    android:textStyle="bold" />
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="bottom"
+                                    android:text="UZS"
+                                    android:textColor="@color/main_text_color"
+                                    android:textSize="13dp"
+                                    android:textStyle="bold" />
+                            </LinearLayout>
+
+                        </LinearLayout>
+                    </HorizontalScrollView>
+
+
 
                     <HorizontalScrollView
                         android:layout_width="match_parent"
@@ -76,7 +207,7 @@
                                     android:gravity="right"
                                     android:maxLines="1"
                                     android:padding="5dp"
-                                    android:text="Bought price"
+                                    android:text="Bought pr x1"
                                     android:textColor="@color/main_text_color"
                                     android:textStyle="bold" />
 
@@ -89,7 +220,19 @@
                                     android:gravity="right"
                                     android:maxLines="1"
                                     android:padding="5dp"
-                                    android:text="Tax price"
+                                    android:text="Tax pr x1"
+                                    android:textColor="@color/main_text_color"
+                                    android:textStyle="bold" />
+                                <TextView
+                                    android:id="@+id/tv_total_tax_price"
+                                    android:layout_width="90dp"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center"
+                                    android:background="@drawable/style_null"
+                                    android:gravity="right"
+                                    android:maxLines="1"
+                                    android:padding="5dp"
+                                    android:text="Total tax pr"
                                     android:textColor="@color/main_text_color"
                                     android:textStyle="bold" />
 
@@ -173,9 +316,57 @@
                         </LinearLayout>
 
                     </HorizontalScrollView>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:orientation="horizontal">
+
+                        <Button
+                            android:id="@+id/delete_calc"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="5dp"
+                            android:layout_weight="1"
+                            android:backgroundTint="@color/red_color"
+                            android:ellipsize="end"
+                            android:maxLines="1"
+                            android:text="Delete"
+                            android:textAllCaps="false" />
+
+                        <Button
+                            android:id="@+id/make_calc"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="5dp"
+                            android:layout_marginRight="5dp"
+                            android:layout_weight="1.3"
+                            android:backgroundTint="@color/gray_1x"
+                            android:ellipsize="end"
+                            android:maxLines="1"
+                            android:text="Calc"
+                            android:textAllCaps="false" />
+
+                        <Button
+                            android:id="@+id/apply_calc"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="5dp"
+                            android:layout_weight="1"
+                            android:backgroundTint="@color/main_text_color"
+                            android:ellipsize="end"
+                            android:maxLines="1"
+                            android:text="Apply"
+                            android:textAllCaps="false" />
+                    </LinearLayout>
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="40dp" />
 
 
         </LinearLayout>
