--- a/app/src/main/res/layout/item_rv_calculate.xml
+++ b/app/src/main/res/layout/item_rv_calculate.xml
@@ -3,6 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:alpha="1"
+    android:backgroundTint="@color/white"
+    android:descendantFocusability="beforeDescendants"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
     android:orientation="horizontal">
 
     <TextView
@@ -39,6 +44,8 @@
         android:layout_gravity="center_vertical"
         android:background="@drawable/style_null"
         android:digits="0123456789"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:gravity="right|center_vertical"
         android:imeOptions="actionDone"
         android:inputType="numberDecimal"
@@ -49,18 +56,28 @@
         android:textSize="14dp"
         android:textStyle="bold" />
 
-    <EditText
+    <TextView
         android:id="@+id/tv_tax_price"
         android:layout_width="90dp"
         android:layout_height="27dp"
         android:layout_gravity="center_vertical"
-        android:background="@drawable/style_null"
-        android:digits="0123456789"
         android:gravity="right|center_vertical"
-        android:imeOptions="actionDone"
-        android:inputType="numberDecimal"
         android:maxLines="1"
         android:padding="5dp"
+        android:ellipsize="end"
+        android:text="150 000"
+        android:textColor="@color/main_text_color"
+        android:textSize="14dp"
+        android:textStyle="bold" />
+    <TextView
+        android:id="@+id/tv_total_tax_price"
+        android:layout_width="90dp"
+        android:layout_height="27dp"
+        android:layout_gravity="center_vertical"
+        android:gravity="right|center_vertical"
+        android:maxLines="1"
+        android:padding="5dp"
+        android:ellipsize="end"
         android:text="150 000"
         android:textColor="@color/main_text_color"
         android:textSize="14dp"
@@ -85,40 +102,48 @@
         android:layout_width="100dp"
         android:layout_height="33dp"
         android:layout_marginLeft="10dp"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:gravity="center"
         android:orientation="horizontal">
 
         <Button
+            android:id="@+id/minus_btn"
             android:layout_width="27dp"
             android:layout_height="match_parent"
-            android:text="-"
-            android:textStyle="bold"
-            android:padding="0dp"
-            android:textAllCaps="false"
             android:gravity="center"
-            android:textSize="15dp" />
+            android:padding="0dp"
+            android:text="-"
+            android:textAllCaps="false"
+            android:textSize="15dp"
+            android:textStyle="bold" />
 
         <EditText
+            android:id="@+id/quantity"
             android:layout_width="46dp"
             android:layout_height="match_parent"
             android:background="@drawable/style_null"
+            android:digits="0123456789"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             android:gravity="center"
             android:hint="0"
+            android:imeOptions="actionDone"
             android:inputType="numberDecimal"
-            android:digits="0123456789"
-            android:maxLines="1"
             android:maxLength="4"
+            android:maxLines="1"
             android:textSize="15dp" />
 
         <Button
+            android:id="@+id/plus_btn"
             android:layout_width="27dp"
             android:layout_height="match_parent"
-            android:text="+"
-            android:textStyle="bold"
-            android:padding="0dp"
-            android:textAllCaps="false"
             android:gravity="center"
-            android:textSize="15dp" />
+            android:padding="0dp"
+            android:text="+"
+            android:textAllCaps="false"
+            android:textSize="15dp"
+            android:textStyle="bold" />
     </LinearLayout>
 
     <EditText
@@ -128,6 +153,8 @@
         android:layout_gravity="center_vertical"
         android:background="@drawable/style_null"
         android:digits="0123456789"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:gravity="right|center_vertical"
         android:imeOptions="actionDone"
         android:inputType="numberDecimal"
@@ -168,4 +195,12 @@
         android:text="150 000"
         android:textColor="@color/main_text_color"
         android:textStyle="bold" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_gravity="center"
+        android:src="@drawable/ic_close"
+        app:tint="@color/red_color" />
 </LinearLayout>
