--- a/app/src/main/res/layout/dialog_bottom_add_product.xml
+++ b/app/src/main/res/layout/dialog_bottom_add_product.xml
@@ -60,6 +60,8 @@
 
                     <EditText
                         android:id="@+id/name"
+                        android:maxLines="2"
+                        android:imeOptions="actionDone"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_margin="0dp"
