--- a/app/src/main/res/layout/fragment_calculate.xml
+++ b/app/src/main/res/layout/fragment_calculate.xml
@@ -9,6 +9,7 @@
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabs"
+        app:tabInlineLabel="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
@@ -56,9 +57,9 @@
 
                                 <ImageView
                                     android:id="@+id/bookmark"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginRight="5dp"
+                                    android:layout_width="30dp"
+                                    android:layout_height="30dp"
+                                    android:layout_marginRight="10dp"
                                     android:src="@drawable/ic_bookmark"
                                     app:tint="@color/main_text_color" />
 
