--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="main_text_color">@color/teal_700</color>
     <color name="red_color">#C3291D</color>
     <color name="gray_1x">#A8A8A8</color>
+    <color name="yellow_for_olds">#FFC107</color>
 </resources>
